--- a/Ingenio.PortalWebExterno/Content/sass/main_style.css
+++ b/Ingenio.PortalWebExterno/Content/sass/main_style.css
@@ -2033,7 +2033,7 @@ i {
 /*$primary-color: rgba(252,187,43,1);*/
 .multiportal-contenedor-general {
   background-image: url(../../../img/Img_Web2/Fondo4.png);
-  background-color: red;
+  /*background-color: red;*/
   background-repeat: no-repeat;
   background-size: contain; }
 
