--- a/Ingenio.PortalWebExterno/Content/sass/pages/_multiportal.scss
+++ b/Ingenio.PortalWebExterno/Content/sass/pages/_multiportal.scss
@@ -2,7 +2,7 @@
 
 .multiportal-contenedor-general {
     background-image: url(../../../img/Img_Web2/Fondo4.png);
-    background-color: red;
+    /*background-color: red;*/
     background-repeat: no-repeat;
     background-size:contain;
 }
