--- a/Ingenio.PortalWebExterno/Views/Home/ConveniosC.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/ConveniosC.cshtml
@@ -36,7 +36,7 @@
                 reguladores y convenios laborales.
             </p>
         </div>
-        <img src="~/img/Convenios/img_Principal_conve.jpg">
+        <img src="~/img/Img_Web2/convenio_imagen.png">
     </div>
     <div class="convenio__control">
         <div id="todos" class="convenio__boton control_con_active"><i class="fas fa-light fa-border-all"></i>Todos</div>
