--- a/Ingenio.PortalWebExterno/Content/sass/main_style.css
+++ b/Ingenio.PortalWebExterno/Content/sass/main_style.css
@@ -1599,7 +1599,7 @@ i {
       margin: 10px 0; }
     .container__Modal .header_modal img {
       width: 100%;
-      height: 150px; }
+      height: 200px !important; }
   .container__Modal p {
     grid-column: 1 / 2;
     grid-row: 2; }
@@ -2754,3 +2754,17 @@ section.section {
 .login_contantenedor {
   max-width: 1400px;
   margin: auto; }
+
+.simulador-table {
+  margin: 20px auto;
+  min-width: 350px; }
+  .simulador-table .simulador-tabla-titulo {
+    color: rgba(252, 132, 4, 0.9);
+    font-size: 17px; }
+
+.seccion_simulador {
+  max-width: 1400px;
+  margin: 20px auto; }
+  .seccion_simulador .form-horizontal .form-group {
+    margin-right: 0px;
+    margin-left: 0px; }
