--- a/Ingenio.PortalWebExterno/Views/Home/NuestrasAgencias.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/NuestrasAgencias.cshtml
@@ -68,7 +68,6 @@
                             <div id="@agencia.Id" class="agencias agencia_2">
                                 <img src="@agencia.Url" />
                                 <p>@agencia.Nombre</p>
-                                <p style="position:absolute;color:red;">Prueba</p>
                             </div>
                         }
                     }
@@ -83,7 +82,6 @@
                             <div id="@agencia.Id" class="agencias agencia_2">
                                 <img src="@agencia.Url" />
                                 <p>@agencia.Nombre</p>
-                                <p style="position:absolute;color:red;">Prueba</p>
                             </div>
                         }
                     }
@@ -98,7 +96,6 @@
                             <div id="@agencia.Id" class="agencias agencia_2">
                                 <img src="@agencia.Url" />
                                 <p>@agencia.Nombre</p>
-                                <p style="position:absolute;color:red;">Prueba</p>
                             </div>
                         }
                     }
@@ -114,7 +111,7 @@
                     <div class="container__Modal">
                         <div class="header_modal">
                             <h2>@agencia.Nombre</h2>
-                            <img src="@agencia.Url" />
+                            <img src="@agencia.foto" />
                         </div>
                         <p>
                             <strong>Dirección: </strong><br>
