--- a/Ingenio.PortalWebExterno/Content/sass/pages/_nuestasAgencias.scss
+++ b/Ingenio.PortalWebExterno/Content/sass/pages/_nuestasAgencias.scss
@@ -210,7 +210,7 @@ $secondary-color: rgba(236, 28, 36, 0.75);
 
         img {
             width: 100%;
-            height: 150px;
+            height: 200px !important;
         }
     }
 
