--- a/Ingenio.PortalWebExterno/Views/Home/Ahorros.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/Ahorros.cshtml
@@ -15,10 +15,8 @@
 <section id="textura">
     <div class="container">
         <p class="text-justify" style="color:#eeeeee;padding:20px; font-size:20px;margin:20px auto;background:rgba(252,132,4,0.9);max-width:1400px;">
-            Teniendo en cuenta las condiciones y necesidades de la población,
-            <strong>COFINAL®</strong> ha diseñado un amplio portafolio de productos de ahorros, con el propósito de sembrar
-            y cultivar en sus asociados, el buen hábito del ahorro, estimulándolo con atractivas tasas de interés,
-            bajos costos financieros y un amplio portafolio.
+            Todos los ahorros de los asociados son respaldados por el <strong>Seguro para el Ahorro</strong>, ofrecido por el Fondo de garantías Cooperativas “FOGACOOP”. Este seguro es para todas las líneas de captación, excepto los Aportes Sociales.
+            Colocar encabezado
         </p>
     </div>
 </section>
