--- a/Ingenio.PortalWebExterno/Views/Home/Index.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/Index.cshtml
@@ -165,16 +165,16 @@
                                 <source src="~/Videos/animacion_cel.mp4" type="video/mp4" />
                             </video>
                         </div>
-                        <div class="content-video">
+                        @*<div class="content-video">
                             <a href="~/Home/ActualizacionDatos" class="myButtons centerSpan">Actualiza tu información personal aqui</a>
-                        </div>
+                        </div>*@
                     </section>
                 </section>
             </div>
             <!--Final fondo de Video -->
             <section class="seccion__general">
                 <section class="container__seccion">
-                    <h3 class="tituleAnimation">¿En que te podemos ayudar?</h3>
+                    <h3 class="tituleAnimation">Conoce mas</h3>
                     <div class="nuestros__Servicios">
                         <a href="~/Home/ahorros" class="tartjeta__servicios animacion_arriba">
                             <img src="~/img/Img_Web2/icono-ahorro.png" style="padding:10px 0px;" />
@@ -186,7 +186,7 @@
                         </a>
                         <a href="~/FormatosAC/Index" class="tartjeta__servicios animacion_arriba">
                             <img src="~/img/Img_Web2/iconos/quiero-ser-socio.png" />
-                            <p>Quiero ser socio</p>
+                            <p>Quiero ser asociado</p>
                         </a>
                         <a class="tartjeta__servicios animacion_arriba">
                             <img src="~/img/Img_Web2/iconos/fondo-social.png" />
@@ -694,9 +694,6 @@
             }
         </script>
     }
-    @*<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>*@
-    @*<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>*@
-    @*<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>*@
     <script type="text/javascript" src="~/Content/slick/slick/slick.min.js"></script>
     <script type="text/javascript">
         // Control de slider
