--- a/Ingenio.PortalWebExterno/Views/Shared/Navbar.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Shared/Navbar.cshtml
@@ -132,18 +132,18 @@
                             @*<li id="fundacionActivo">
                                 <a href="http://funcofinal.org/">FUNDACIÓN COFINAL</a>
                             </li>*@
-                            <li id="fundacionActivo">
+                            @*<li id="fundacionActivo">
                                 <a href="#"><span class="underline">Porque elegir Cofinal</span></a>
-                            </li>
+                            </li>*@
                             @*<li id="fundacionActivo">
                                 <a href="#"><span class="underline">Coperativa Virtual</span></a>
                             </li>*@
                             <li id="multiportal">
                                 <a href="~/Home/Multiportal"><span class="underline">MULTIPORTAL</span></a>
                             </li>
-                            @*<li id="multiportal">
-                                <a href="~/Home/RteDian">RTE DIAN</a>
-                            </li>*@
+                            <li id="PQRS">
+                                <a href="~/PQRS/index">P.Q.R.S</a>
+                            </li>
 
                             @if (cuentaUsuario.IsAsociado)
                             {
