--- a/Ingenio.PortalWebExterno/Views/PQRS/Index.cshtml
+++ b/Ingenio.PortalWebExterno/Views/PQRS/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model Ingenio.PortalWebExterno.Models.Formato
+﻿@using Ingenio.PortalWebExterno.Models;
+@model Ingenio.PortalWebExterno.Models.Formato
 
 @{
     ViewBag.Title = "PQRS";
@@ -50,8 +51,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Asociado, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @*@Html.DropDownListFor(model => model.Asociado, Model.)*@
-                @Html.EditorFor(model => model.Asociado, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.Asociado, EnumHelper.GetSelectList(typeof(Asociados)), "Seleccionar")
                 @Html.ValidationMessageFor(model => model.Asociado, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -63,7 +63,13 @@
                 @Html.ValidationMessageFor(model => model.Correo, "", new { @class = "text-danger" })
             </div>
         </div>
-
+        <div class="form-group">
+            @Html.LabelFor(model => model.Agencia, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(model => model.Agencia, EnumHelper.GetSelectList(typeof(Agencias)), "Seleccionar")
+                @Html.ValidationMessageFor(model => model.Agencia, "", new { @class = "text-danger" })
+            </div>
+        </div>
         <div class="form-group">
             @Html.LabelFor(model => model.Telefono, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
